# SekaiEngine

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: apple.cmake  web.cmake
core/: CMakeLists.txt  application.cpp  application.h  game.cpp  game.h  scence_manager.cpp
drawable/: CMakeLists.txt  GradientDrawable.cpp  GradientDrawable.h  LineDrawable.cpp  LineDrawable.h  RotationDrawable.cpp  RotationDrawable.h  ScaleDrawable.cpp  ScaleDrawable.h  SingleColorDrawable.cpp  SingleColorDrawable.h
graphic/: CMakeLists.txt  text.h
graphics/: CMakeLists.txt  graphic.cpp  shape.cpp  shape.h  text.cpp  text.h  transform2d.h
objects/: CMakeLists.txt  game_object.cpp  game_object.h  game_objects_container.cpp  scence.cpp  scence.h  sprite.cpp  sprite.h
scripts/pre-installer/linux/redhat/: preinstaller.sh
shapes/: CMakeLists.txt  circle.h  point.h
src/api/: APIConfig.hpp  Camera2D.cpp  Camera2D.hpp  Color.cpp  Color.hpp  DrawGraphic.cpp  DrawGraphic.hpp  Image.cpp  Image.hpp  Monitor.cpp  Monitor.hpp  Shape.cpp  Shape.hpp  Texture.cpp  Texture.hpp  Ticker.cpp  Ticker.hpp  Vector.cpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp  Window.cpp  Window.hpp
src/application/: Application.cpp  Application.hpp  Game.cpp  Game.hpp
src/core/: CMakeLists.txt  Container.cpp  Container.hpp  GameObject.cpp  GameObject.hpp  Scence.cpp  Scence.hpp  application.cpp  application.h  asset-manager.cpp  asset-manager.h  game.cpp  game.h  scence_manager.cpp  scence_manager.h
src/graphics/: CMakeLists.txt  drawable.h  graphic.cpp  graphic.h  shape.cpp  shape.h  texture.cpp  texture.h  transform2d.cpp  transform2d.h
src/input/: CMakeLists.txt  gamepad.cpp  gamepad.h  input-axis.cpp  input-axis.h  input-manager.cpp  input-manager.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  touch.cpp  touch.h
src/objects/: CMakeLists.txt  game_object.cpp  game_object.h  scence.cpp  scence.h  sprite.h
src/renderable/: Renderable.cpp  Renderable.hpp  RenderableGraphic.cpp  RenderableGraphic.hpp  RenderableProperties.cpp  RenderableProperties.hpp
src/shapes/: CMakeLists.txt  circle.cpp  circle.h  line.cpp  line.h  point.cpp  point.h  rectangle.cpp  rectangle.h
src/utility/: CMakeLists.txt  math.cpp  math.hpp  vector2d.cpp
test/: test.cpp
text/: ASCIIText.cpp  ASCIIText.h
utility/: CMakeLists.txt  math.cpp  math.h  vector2d.h
